Replace URL by URI class to parse Destination header in WebdavServlet.